--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,5 @@ tokio = { version = "1", features = ["full","time"] }
 ti_protocol = {path="../ti_protocol"}
 rand="0.8"
 chrono="0.4"
+log="0.4"
+log4rs="1"
