--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,3 +20,4 @@ sqlx = { version = "0.5", features = [ "runtime-tokio-rustls" ] }
 hyper = "0.14"
 reqwest={version="0.11", features=["json"]}
 urlencoding = "2.1.0"
+tower-http = {version = "0.3", features = ["cors", "fs"]}
